--- a/Competency.html
+++ b/Competency.html
@@ -230,6 +230,7 @@
         <h2>高中物理素養題</h2>
         <div id="level-selection">
             <button class="level-button" onclick="selectLevel('因次')">因次</button>
+            <button class="level-button" onclick="selectLevel('等加速度運動')">等加速度運動</button>
             <button class="level-button" onclick="selectLevel('111年學測')">111年學測</button>
             <button class="level-button" onclick="selectLevel('112年學測')">112年學測</button>
             <button class="level-button" onclick="selectLevel('113年學測')">113年學測</button>
