--- a/AItext.html
+++ b/AItext.html
@@ -251,7 +251,7 @@
             }
 
             const topicText = document.getElementById('topicText').value;
-            const conditions = "符合高中學科學習目標，並為該領域專家融合 PILRS 四層次提問法的精神設計的結合生活情境之素養題";
+            const conditions = "符合高中學科學習目標，並為該領域專家設計的符合使用者年級並結合生活情境之素養題";
             const grade = document.getElementById('grade').value;
             const questionCount = document.getElementById('questionCount').value;
 
