--- a/AItext.html
+++ b/AItext.html
@@ -179,7 +179,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Puti-AI測驗產生器</h1>
+        <h1>AI素養題題目產生器</h1>
 
         <div class="form-group">
             <label for="topic">主題 (必填):</label>
