--- a/AItext.html
+++ b/AItext.html
@@ -82,6 +82,7 @@
             cursor: pointer;
             font-weight: bold;
             transition: background-color 0.3s, transform 0.2s;
+            font-size: 18px;
         }
 
         button:hover {
@@ -256,6 +257,7 @@
             const questionCount = document.getElementById('questionCount').value;
 
             document.getElementById('questions').innerHTML = '<p class="loading">生成題目中，請稍候...</p>';
+            document.getElementById('quizForm').style.display = 'none';
 
             try {
                 const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-pro:generateContent?key=${GEMINI_API_KEY}`, {
@@ -291,7 +293,10 @@
                     const jsonMatch = textContent.match(/\{[\s\S]*\}/);
                     if (jsonMatch) {
                         const parsedData = JSON.parse(jsonMatch[0]);
-                        questions = parsedData.questions;
+                        questions = parsedData.questions.map((q) => {
+                            q.options = [...new Set(q.options)]; // 去重
+                            return q;
+                        });
                         displayQuestions(questions);
                         document.getElementById('quizForm').style.display = 'block';
                     } else {
@@ -302,7 +307,6 @@
                 }
             } catch (error) {
                 document.getElementById('questions').innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
-                console.error('生成題目失敗:', error);
             }
 
             button.innerText = '重新生成題目';
@@ -313,11 +317,19 @@
             questionsDiv.innerHTML = '';
 
             questions.forEach((q, i) => {
+                const uniqueOptions = [...new Set(q.options)]; // 去重
+
+                while (uniqueOptions.length < 4) {
+                    uniqueOptions.push(`選項${uniqueOptions.length + 1}`); // 補足選項
+                }
+
+                const limitedOptions = uniqueOptions.slice(0, 4);
+
                 const questionHtml = `
                     <div class="question-card">
                         <p><strong>${i + 1}. ${q.question}</strong></p>
                         <div class="question-options">
-                            ${q.options.map((option, j) => `
+                            ${limitedOptions.map((option, j) => `
                                 <label>
                                     <input type="radio" name="question${i}" value="${j}" required>
                                     ${['A', 'B', 'C', 'D'][j]}. ${option}
@@ -328,6 +340,9 @@
                 `;
                 questionsDiv.innerHTML += questionHtml;
             });
+
+            const submitButton = document.querySelector('.submit-button');
+            submitButton.style.display = 'block';
         }
 
         function checkAnswers(event) {
@@ -352,6 +367,9 @@
             });
 
             displayResults(results);
+
+            const submitButton = document.querySelector('.submit-button');
+            submitButton.style.display = 'none';
         }
 
         function displayResults(results) {
