--- a/AItext.html
+++ b/AItext.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI素養題題目產生器</title>
+    <title>AI素養題產生器</title>
     <style>
         :root {
             --primary-color: #4a90e2;
@@ -181,7 +181,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>AI素養題題目產生器</h1>
+        <h1>AI素養題產生器</h1>
 
         <div class="form-group">
             <label for="topic">主題 (必填):</label>
