--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="Competency.html">高中物理素養題</a>
+                  <a href="AItext.html">AI素養題產生器</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
                
