--- a/AItext.html
+++ b/AItext.html
@@ -189,7 +189,7 @@
         </div>
 
         <div class="form-group">
-            <label for="topicText">主題文本:</label>
+            <label for="topicText">補充提詞或學習內容文本(選填):</label>
             <textarea id="topicText"></textarea>
         </div>
 
