--- a/AItext.html
+++ b/AItext.html
@@ -194,7 +194,7 @@
         </div>
 
         <div class="form-group">
-            <label for="grade">適用年級:</label>
+            <label for="grade">題目程度:</label>
             <select id="grade">
                 <option value="">請選擇年級</option>
             </select>
