--- a/AItext.html
+++ b/AItext.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -209,6 +208,7 @@
 
         <div class="button-group">
             <button id="generateButton" onclick="generateQuestions()">生成題目</button>
+            <button id="copyContent"onclick="copyContent()" style="display:none;" >複製題本</button>
         </div>
 
         <form id="quizForm" class="result-area" onsubmit="checkAnswers(event)">
@@ -218,7 +218,7 @@
     </div>
 
     <script>
-        const GEMINI_API_KEY = 'AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ';
+        
 
         let questions = [];
 
@@ -261,7 +261,7 @@
             document.getElementById('quizForm').style.display = 'none';
 
             try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=${GEMINI_API_KEY}`, {
+                const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -311,40 +311,47 @@
             }
 
             button.innerText = '重新生成題目';
+            document.getElementById('copyContent').style.display = 'block';
+
         }
 
         function displayQuestions(questions) {
-            const questionsDiv = document.getElementById('questions');
-            questionsDiv.innerHTML = '';
+    const questionsDiv = document.getElementById('questions');
+    questionsDiv.innerHTML = '';
 
-            questions.forEach((q, i) => {
-                const uniqueOptions = [...new Set(q.options)]; // 去重
+    questions.forEach((q, i) => {
+        const uniqueOptions = [...new Set(q.options)]; // 去重
 
-                while (uniqueOptions.length < 4) {
-                    uniqueOptions.push(`選項${uniqueOptions.length + 1}`); // 補足選項
-                }
+        // 檢查選項是否已包含標籤，例如 "A. " 開頭
+        const formattedOptions = uniqueOptions.map((option, index) => {
+            if (/^[A-D]\.\s/.test(option)) {
+                // 選項已包含標籤，直接返回
+                return option;
+            }
+            // 否則，添加標籤
+            return `${['A', 'B', 'C', 'D'][index]}. ${option}`;
+        });
 
-                const limitedOptions = uniqueOptions.slice(0, 4);
+        const questionHtml = `
+            <div class="question-card">
+                <p><strong>${i + 1}. ${q.question}</strong></p>
+                <div class="question-options">
+                    ${formattedOptions.map((option, j) => `
+                        <label>
+                            <input type="radio" name="question${i}" value="${j}" required>
+                            ${option}
+                        </label>
+                    `).join('')}
+                </div>
+            </div>
+        `;
+        questionsDiv.innerHTML += questionHtml;
+    });
 
-                const questionHtml = `
-                    <div class="question-card">
-                        <p><strong>${i + 1}. ${q.question}</strong></p>
-                        <div class="question-options">
-                            ${limitedOptions.map((option, j) => `
-                                <label>
-                                    <input type="radio" name="question${i}" value="${j}" required>
-                                    ${['A', 'B', 'C', 'D'][j]}. ${option}
-                                </label>
-                            `).join('')}
-                        </div>
-                    </div>
-                `;
-                questionsDiv.innerHTML += questionHtml;
-            });
+    const submitButton = document.querySelector('.submit-button');
+    submitButton.style.display = 'block';
+}
 
-            const submitButton = document.querySelector('.submit-button');
-            submitButton.style.display = 'block';
-        }
 
 function checkAnswers(event) {
     event.preventDefault();
@@ -395,8 +402,36 @@ function displayResults(results) {
         </div>
     `).join('');
 }
+
+function copyContent() {
+    if (questions.length === 0) {
+        alert('請先生成題目！');
+        return;
+    }
+
+    // 構造題目部分
+    let content = '題目列表:\n';
+    questions.forEach((q, index) => {
+        content += `${index + 1}. ${q.question}\n`;
+        q.options.forEach((option, i) => {
+            content += `   ${['A', 'B', 'C', 'D'][i]}. ${option}\n`;
+        });
+    });
+
+    // 構造答案與解答部分
+    content += '\n正確答案與解答:\n';
+    questions.forEach((q, index) => {
+        content += `${index + 1}. 正確答案: ${['A', 'B', 'C', 'D'][q.answer]}\n`;
+        content += `   解答說明: ${q.explanation}\n\n`;
+    });
+
+    // 使用 Clipboard API 複製內容到剪貼簿
+    navigator.clipboard.writeText(content)
+        .then(() => alert('內容已複製到剪貼簿！'))
+        .catch(err => alert('複製失敗：' + err));
+}
+
+
     </script>
 </body>
 </html>
-
-
