--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
                   <a href="Ohtaigi.html">台語課程</a>
+                  <a href="GasHtml/Lesson1.html">GAStoHTML</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
