--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                   <a href="AItext.html">AI素養題產生器</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
+                  <a href="https://script.google.com/macros/s/AKfycbz0eobfjlXtSaM0Tlalbz0mb0CtrHqRiEiI23Al6t8GF2QE3OsDr8Xk5E_mCsgEVqQ8/exec">課堂小考專區</a>
                
               </div>
 
