--- a/physics.html
+++ b/physics.html
@@ -21,22 +21,27 @@
   <div id="news" class="big-bg">
     <header class="page-header wrapper">
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
-           <nav>
+            <nav>
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
                   <a href="physics.html">物理課程</a>
+                  <a href="exp.html">探究與實作</a>
                   <a href="WebDesign.html">網頁設計</a>
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
                   <a href="Ohtaigi.html">台語課程</a>
+                  <a href="GasHtml/Lesson1.html">GAStoHTML</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
-                  <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
-                  <a href="Ttest.html">國中技藝競賽題庫</a>
+                  <a href="Competency.html">高中物理素養題</a>
+                  <a href="AItext.html">AI素養題產生器</a>
+                  <a href="https://script.google.com/macros/s/AKfycbwNETBIUUmu11Cx0ueA3jCn4_Dc-E79n1E86sv7Pg1ewuDT6U6c71mqm1fKPi5jAHMC/exec">教師小考出題</a>
+                  <a href="https://script.google.com/macros/s/AKfycbxJqNx4V5074SrHSNzwcXYyTY9SL1dltKwu9_odzBbLuuYq9vvu2AyJwcWYjVqVsSJ7/exec">課堂小考專區</a>
+               
               </div>
 
           </li>
@@ -46,7 +51,7 @@
               <div class="dropdown-content" id="myDropdown3">
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet713計畫</a>
-                  <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                  <a href="https://guidephy.github.io/pond/">埤塘水資源</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                    <a href="https://guidephy.github.io/grades.html">課堂計分</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
