--- a/physics.html
+++ b/physics.html
@@ -40,6 +40,7 @@
                   <a href="Competency.html">高中物理素養題</a>
                   <a href="AItext.html">AI素養題產生器</a>
                   <a href="https://script.google.com/macros/s/AKfycbwNETBIUUmu11Cx0ueA3jCn4_Dc-E79n1E86sv7Pg1ewuDT6U6c71mqm1fKPi5jAHMC/exec">教師小考出題</a>
+                  <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRSXTUcQ6Tn5F-rSK1zRwvBs_Ka_ORgrGH_Bg_poI3zDlDxuC4BXjJBPssleiI_wlZcSsrH7SBB0ngH/pubhtml?gid=1491440434&single=true">小考結果查詢</a>
                   <a href="https://script.google.com/macros/s/AKfycbxJqNx4V5074SrHSNzwcXYyTY9SL1dltKwu9_odzBbLuuYq9vvu2AyJwcWYjVqVsSJ7/exec">課堂小考專區</a>
                
               </div>
