--- a/physics.html
+++ b/physics.html
@@ -41,7 +41,7 @@
                   <a href="AItext.html">AI素養題產生器</a>
                   <a href="https://script.google.com/macros/s/AKfycby0c32texmEGAEA1ZeSZPxelArlJXz08cNhUgUktRpxOYag2YBRJ3nOt93saeAoICbT/exec">教師小考出題</a>
                   <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRSXTUcQ6Tn5F-rSK1zRwvBs_Ka_ORgrGH_Bg_poI3zDlDxuC4BXjJBPssleiI_wlZcSsrH7SBB0ngH/pubhtml?gid=1491440434&single=true">小考結果查詢</a>
-                  <a href="https://script.google.com/macros/s/AKfycbxJqNx4V5074SrHSNzwcXYyTY9SL1dltKwu9_odzBbLuuYq9vvu2AyJwcWYjVqVsSJ7/exec">課堂小考專區</a>
+                  <a href="https://script.google.com/macros/s/AKfycbz2jTFyvGj_Rh6gjYhqLnSogGD0MuAVe_rK64uhOAl8QkiWmaCUV_smRu0FJ5BwZa2H/exec">線上課堂小考</a>
                
               </div>
 
