--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <a href="Competency.html">高中物理素養題</a>
                   <a href="AItext.html">AI素養題產生器</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
-                  <a href="https://script.google.com/macros/s/AKfycbxJqNx4V5074SrHSNzwcXYyTY9SL1dltKwu9_odzBbLuuYq9vvu2AyJwcWYjVqVsSJ7/exec">課堂小考專區</a>
+                  <a href="https://script.google.com/macros/s/AKfycbz2jTFyvGj_Rh6gjYhqLnSogGD0MuAVe_rK64uhOAl8QkiWmaCUV_smRu0FJ5BwZa2H/exec">線上課堂小考</a>
                
               </div>
 
