--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="Competency.html">高中物理素養題</a>
-                  <a href="AItext.html">AI素養題產生器</a>
+                  <a href="AItest.html">AI素養題產生器</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
                   <a href="https://script.google.com/macros/s/AKfycbycTFRZx3FSyxa6qjPt6O-qfUvPLJ5YYc0Brhdn5QXdMnvnWx1TzI1mnTWFPFVu87jD/exec">線上課堂小考</a>
                
