--- a/physics.html
+++ b/physics.html
@@ -25,7 +25,7 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
-                  <a href=https://guidephy.github.io/guidephy/PhysicsForGSAT/CH5/Lesson1.html">高一物理-CH5能量</a>
+                  <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH5/Lesson1.html">高一物理-CH5能量</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
