--- a/physics.html
+++ b/physics.html
@@ -25,6 +25,7 @@
         <ul class="main-nav">
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction1()">學習講義</a>
               <div class="dropdown-content" id="myDropdown1">
+                  <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH1/Lesson1.html">高一物理-CH1科學的態度與方法</a>
                   <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH3/Lesson1.html">高一物理-CH3物質的組成與交互作用</a>
                   <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH4/Lesson1.html">高一物理-CH4電與磁的統一</a>
                   <a href="https://guidephy.github.io/guidephy/PhysicsForGSAT/CH5/Lesson1.html">高一物理-CH5能量</a>
