--- a/webBot.html
+++ b/webBot.html
@@ -3,45 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>聊天機器人</title>
+    <title>隨身家教</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #e5e5e5;
             margin: 0;
+            font-family: 'Arial', sans-serif;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .chat-container {
-            width: 100%;
-            max-width: 400px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
             height: 100vh;
             overflow: hidden;
-            position: relative;
+            background-color: #f7f6f2; /* 柔和背景 */
         }
 
-        @media (max-width: 768px) {
-            .chat-container {
-                width: 100%;
-                border-radius: 0;
-            }
+        .sidebar {
+            width: 250px;
+            background-color: #f0f0f0; /* 淡灰色 */
+            color: #333; /* 深灰字體 */
+            display: flex;
+            flex-direction: column;
+            transition: transform 0.3s ease;
+            z-index: 1000;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); /* 輕微陰影 */
         }
 
-        .chat-header {
-            background-color: #0078ff;
-            color: #fff;
-            padding: 10px;
+        .sidebar.hidden {
+            transform: translateX(-250px);
+        }
+
+        .sidebar-header {
+            padding: 20px;
             text-align: center;
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
+            background-color: #f0f0f0; /* 統一背景色 */
+        }
+
+        .sidebar-menu {
+            flex: 1;
+            padding: 10px;
+        }
+
+        .menu-item {
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.2s ease, color 0.2s ease;
+            color: #333;
+        }
+
+        .menu-item:hover {
+            background-color: #d9d9d9; /* hover效果 */
+            color: #000; /* 深色字體 */
+        }
+
+        .menu-item.close-menu {
+            display: none;
+            background-color: #ff6666; /* 紅色 */
+            color: white;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .menu-item.close-menu:hover {
+            background-color: #cc0000;
+        }
+
+        .main-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            background-color: #fafafa; /* 主區域背景 */
+        }
+
+        .header {
+            background-color: #8ab0ab; /* 文青綠 */
+            color: white;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .header .menu-toggle {
+            display: none;
+            font-size: 24px;
+            cursor: pointer;
         }
 
         .chat-window {
@@ -51,7 +96,6 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
-            transition: height 0.3s ease;
         }
 
         .message {
@@ -60,94 +104,77 @@
             border-radius: 15px;
             word-wrap: break-word;
             animation: fadeIn 0.3s ease-in-out;
+            font-size: 14px;
         }
 
         .user-message {
             align-self: flex-end;
-            background-color: #dcf8c6;
+            background-color: #d9f2d9; /* 柔和綠 */
+            color: #333;
         }
 
         .bot-message {
             align-self: flex-start;
-            background-color: #f1f1f1;
+            background-color: #e8e8e8; /* 柔和灰 */
+            color: #333;
         }
 
         .input-area {
             display: flex;
-            align-items: center;
+            padding: 10px;
             border-top: 1px solid #ddd;
-            padding: 10px;
-            background-color: #fff;
-            position: relative;
-        }
-
-        #other-functions {
-            background-color: #0078ff;
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            justify-content: center;
+            background-color: white;
             align-items: center;
-            font-size: 20px;
-            cursor: pointer;
-            margin-right: 10px;
+            gap: 10px;
         }
 
-        #other-functions:hover {
-            background-color: #005bb5;
-        }
-
-        .function-menu {
-            display: none;
-            position: absolute;
-            bottom: 60px;
-            left: 10px;
-            width: calc(100% - 20px);
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            z-index: 10;
-        }
-
-        .function-menu .function-button {
-            padding: 10px;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
+        .upload-button {
+            background-color: #8ab0ab; /* 文青綠 */
+            color: white;
+            border: none;
+            border-radius: 20px;
+            padding: 10px 15px;
             cursor: pointer;
         }
 
-        .function-menu .function-button:last-child {
-            border-bottom: none;
+        .upload-button:hover {
+            background-color: #6e928b;
         }
 
-        .function-menu .function-button:hover {
-            background-color: #f9f9f9;
-        }
-
-        .image-preview-container {
-            display: none;
-            position: absolute;
-            bottom: 120px;
-            left: 10px;
-            width: calc(100% - 20px);
-            background-color: #fff;
+        #user-input {
+            flex: 1;
             padding: 10px;
             border: 1px solid #ddd;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            z-index: 15;
+            border-radius: 20px;
+            outline: none;
         }
 
-        .image-preview-container img {
-            width: 100%;
+        #send-button {
+            padding: 10px 20px;
+            background-color: #8ab0ab; /* 文青綠 */
+            color: white;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+        }
+
+        #send-button:hover {
+            background-color: #6e928b; /* hover顏色 */
+        }
+
+        .image-preview {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-top: 5px;
+        }
+
+        .image-preview img {
+            max-width: 50px;
             border-radius: 10px;
         }
 
-        .image-preview-container .delete-button {
+        .image-preview .delete-button {
             background-color: red;
             color: white;
             border-radius: 50%;
@@ -158,32 +185,33 @@
             align-items: center;
             font-size: 12px;
             cursor: pointer;
-            margin-top: 5px;
-            align-self: flex-end;
         }
 
-        #user-input {
-            flex: 1;
-            border: none;
-            outline: none;
-            padding: 10px;
-            border-radius: 20px;
-            background-color: #f1f1f1;
-        }
+        @media (max-width: 768px) {
+            .sidebar {
+                position: absolute;
+                height: 100%;
+                top: 0;
+                left: 0;
+                transform: translateX(-250px);
+            }
 
-        #send-button {
-            margin-left: 10px;
-            background-color: #0078ff;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
+            .sidebar.show {
+                transform: translateX(0);
+            }
 
-        #send-button:hover {
-            background-color: #005bb5;
+            .header .menu-toggle {
+                display: block;
+            }
+
+            .menu-item.close-menu {
+                display: block;
+            }
+
+            .main-content {
+                flex: 1;
+                margin-left: 0;
+            }
         }
 
         @keyframes fadeIn {
@@ -199,106 +227,118 @@
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <div class="chat-header">聊天機器人</div>
-        <div id="chat-window" class="chat-window"></div>
-        <div id="image-preview-container" class="image-preview-container">
-            <img id="image-preview" src="" alt="Image Preview">
-            <div class="delete-button" onclick="clearImagePreview()">x</div>
+    <div class="sidebar" id="sidebar">
+        <div class="sidebar-header">探索工具箱</div>
+        <div class="sidebar-menu">
+            <div class="menu-item close-menu" id="close-menu">關閉選單</div>
+            <div class="menu-item">回到主畫面</div>
+            <div class="menu-item" id="open-link">開啟物理導覽網站</div>
         </div>
+    </div>
+    <div class="main-content">
+        <div class="header">
+            <span class="menu-toggle" id="menu-toggle">☰</span>
+            隨身家教
+        </div>
+        <div class="chat-window" id="chat-window"></div>
         <div class="input-area">
-            <button id="other-functions" title="其它功能">≡</button>
-            <div id="function-menu" class="function-menu">
-                <div id="history-toggle" class="function-button">顯示/隱藏歷史對話</div>
-                <label for="upload-button" class="function-button">上傳圖片</label>
-                <input type="file" id="upload-button" accept="image/*" style="display: none;">
-            </div>
+            <label class="upload-button">
+                上傳照片
+                <input type="file" id="upload-image" accept="image/*" style="display: none;">
+            </label>
+            <div id="image-preview-container" class="image-preview"></div>
             <input type="text" id="user-input" placeholder="輸入訊息...">
             <button id="send-button">傳送</button>
         </div>
     </div>
     <script>
+        const sidebar = document.getElementById('sidebar');
+        const menuToggle = document.getElementById('menu-toggle');
+        const closeMenu = document.getElementById('close-menu');
+        const openLink = document.getElementById('open-link');
+        const uploadImage = document.getElementById('upload-image');
+        const sendButton = document.getElementById('send-button');
+        const userInput = document.getElementById('user-input');
+        const chatWindow = document.getElementById('chat-window');
+        const imagePreviewContainer = document.getElementById('image-preview-container');
+
         let selectedImage = null;
 
-        document.getElementById('other-functions').addEventListener('click', toggleFunctionMenu);
-        document.getElementById('upload-button').addEventListener('change', handleImageUpload);
-        document.getElementById('send-button').addEventListener('click', sendMessage);
+        // 漢堡圖標控制選單顯示/隱藏
+        menuToggle.addEventListener('click', () => {
+            sidebar.classList.add('show');
+        });
 
-        function toggleFunctionMenu() {
-            const menu = document.getElementById('function-menu');
-            const chatWindow = document.getElementById('chat-window');
-            if (menu.style.display === 'none' || menu.style.display === '') {
-                menu.style.display = 'flex';
-                chatWindow.style.height = 'calc(100vh - 160px)';
-            } else {
-                menu.style.display = 'none';
-                chatWindow.style.height = 'calc(100vh - 100px)';
-            }
-        }
+        // 手機模式下關閉選單按鈕
+        closeMenu.addEventListener('click', () => {
+            sidebar.classList.remove('show');
+        });
 
-        function handleImageUpload(event) {
+        // 開啟外部連結
+        openLink.addEventListener('click', () => {
+            window.open('https://guidephy.github.io/', '_blank');
+        });
+
+        // 照片上傳
+        uploadImage.addEventListener('change', (event) => {
             const file = event.target.files[0];
             if (file) {
                 const reader = new FileReader();
                 reader.onload = (e) => {
                     selectedImage = e.target.result;
-                    document.getElementById('image-preview').src = selectedImage;
-                    document.getElementById('image-preview-container').style.display = 'block';
-                    document.getElementById('chat-window').style.height = 'calc(100vh - 240px)';
+                    imagePreviewContainer.innerHTML = `
+                        <img src="${selectedImage}" alt="圖片預覽">
+                        <div class="delete-button" onclick="clearImage()">x</div>
+                    `;
                 };
                 reader.readAsDataURL(file);
             }
-        }
+        });
 
-        function clearImagePreview() {
+        // 清除圖片預覽
+        function clearImage() {
             selectedImage = null;
-            document.getElementById('image-preview-container').style.display = 'none';
-            document.getElementById('chat-window').style.height = 'calc(100vh - 160px)';
+            imagePreviewContainer.innerHTML = '';
         }
 
-        function sendMessage() {
-            const userInput = document.getElementById('user-input').value.trim();
-            if (userInput || selectedImage) {
-                appendMessage(userInput, selectedImage);
-                clearImagePreview();
-                document.getElementById('user-input').value = '';
+        // 傳送訊息功能
+        sendButton.addEventListener('click', () => {
+            const message = userInput.value.trim();
+            if (!message && !selectedImage) return;
+
+            if (selectedImage) {
+                appendMessage(selectedImage, 'user-message', true);
+                clearImage();
             }
-        }
 
-        function appendMessage(text, image) {
-            const chatWindow = document.getElementById('chat-window');
+            if (message) {
+                appendMessage(message, 'user-message');
+            }
+
+            userInput.value = '';
+
+            setTimeout(() => {
+                appendMessage('機器人回應：' + message, 'bot-message');
+            }, 500);
+        });
+
+        function appendMessage(content, className, isImage = false) {
             const message = document.createElement('div');
-            message.classList.add('message', 'user-message');
+            message.classList.add('message', className);
 
-            if (image) {
+            if (isImage) {
                 const img = document.createElement('img');
-                img.src = image;
-                img.style.width = '150px';
+                img.src = content;
+                img.style.maxWidth = '150px';
                 img.style.borderRadius = '10px';
                 message.appendChild(img);
-            }
-
-            if (text) {
-                const textElement = document.createElement('div');
-                textElement.textContent = text;
-                message.appendChild(textElement);
+            } else {
+                message.textContent = content;
             }
 
             chatWindow.appendChild(message);
             chatWindow.scrollTop = chatWindow.scrollHeight;
-
-            // 機器人回覆
-            setTimeout(() => {
-                const botReply = document.createElement('div');
-                botReply.classList.add('message', 'bot-message');
-                botReply.textContent = '機器人回應：' + (text || '圖片已收到！');
-                chatWindow.appendChild(botReply);
-                chatWindow.scrollTop = chatWindow.scrollHeight;
-            }, 500);
         }
     </script>
 </body>
 </html>
-
-
-
