--- a/webBot.html
+++ b/webBot.html
@@ -242,7 +242,7 @@
             <div class="sidebar-menu">
                 <div class="menu-item">回到主畫面</div>
                 <div class="menu-item" id="open-ai-generator">AI素養題產生器</div>
-                <div class="menu-item" id="open-phy-tour">開啟物理導覽網站</div> 
+                <div class="menu-item" id="open-phy-tour">問題提問</div> 
                 <div class="menu-item hidden" id="return-chat">返回聊天</div>
             </div>
         </div>
