--- a/webBot.html
+++ b/webBot.html
@@ -297,7 +297,7 @@
         openPhyTour.addEventListener('click', () => {
             chatWindow.style.display = 'none';
             iframeContainer.style.display = 'block';
-            toolIframe.src = 'https://guidephy.github.io/AItest.html/AI/QA.html'; 
+            toolIframe.src = 'https://guidephy.github.io/AI/QA.html'; 
             openAIGenerator.classList.add('hidden');
             openPhyTour.classList.add('hidden');
             returnChat.classList.remove('hidden');
