--- a/AI/QA.html
+++ b/AI/QA.html
@@ -196,7 +196,7 @@ async function analyzeQuestion() {
     } catch (error) {
         resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
     } finally {
-        button.innerText = '分析題目';
+        button.innerText = '分析問題';
         button.disabled = false;
     }
 }
