--- a/AI/QA.html
+++ b/AI/QA.html
@@ -193,7 +193,7 @@
                         {
                             parts: [
                                 {
-                                    text: '請扮演該領域的專家，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 結論：\n[進一步總結或對結果進行說明]\n請按上述格式分段回應，確保清晰、條理分明。'
+                                    text: '請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5.學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n請按上述格式分段回應，確保清晰、條理分明。'
                                 },
                                 {
                                     inline_data: {
@@ -211,7 +211,7 @@
                         {
                             parts: [
                                 {
-                                    text: `請扮演該領域的專家，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 結論：\n[進一步總結或對結果進行說明]\n\n題目內容：${textInput.value.trim()}`
+                                    text: `請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：\n1. 題意分析：\n[清楚描述題目內容，並標示關鍵資訊]\n2. 相關知識與理論：\n[說明解題需要的相關知識，包括定律、公式或理論]\n3. 解題流程：\n[逐步推導解答過程，分步驟詳細說明]\n4. 答案：\n[清晰呈現最終答案，並標註所用單位或條件]\n5. 學習反思：\n[進一步對上述解題步驟和答案作教師回饋幫助學習]\n\n題目內容：${textInput.value.trim()}`
                                 }
                             ]
                         }
