--- a/AI/QA.html
+++ b/AI/QA.html
@@ -26,7 +26,7 @@
             font-size: 1.8rem;
             margin-bottom: 20px;
             text-align: center;
-            color: #4CAF50;
+            color: #8ab0ab;
         }
 
         .form-group {
@@ -53,7 +53,7 @@
         }
 
         button {
-            background-color: #4CAF50;
+            background-color: #8ab0ab;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -63,7 +63,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #8ab0ab;
         }
 
         .result-area {
@@ -101,7 +101,7 @@
 
         .tab-button.active {
             background-color: #fff;
-            border-bottom: 2px solid #4CAF50;
+            border-bottom: 2px solid #8ab0ab;
         }
 
         .tab-content {
