--- a/AItest.html
+++ b/AItest.html
@@ -6,7 +6,7 @@
     <title>AI素養題產生器</title>
     <style>
         :root {
-            --primary-color: #4a90e2;
+            --primary-color: #8ab0ab;
             --correct-color: #28a745;
             --wrong-color: #dc3545;
             --secondary-color: #f0f4f8;
