--- a/webBot.html
+++ b/webBot.html
@@ -593,7 +593,7 @@
             </div> -->
             <!-- 輸入區域 -->
             <div class="input-area">
-                <label class="upload-button">
+                <label class="upload-button" style="display: none;">
                     上傳照片
                     <input type="file" id="upload-image" accept="image/*" style="display: none;">
                 </label>
